# claude-task-HELLO-008-TEST-createasimplehelloworldscriptf

./: README.md  coverage.json  hello_world.py  package.json  pyproject.toml  test_hello_world.py
